# pdf-libs

./: .env  .env.example  .eslintignore  .eslintrc  .gitignore  Changelog.md  Changelog.md.save  Dockerfile  Dockerfile.working  README.md  benchmark.js  config.js  main.js  package-lock.json  package.json
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: dockerhub.yml  test.yml
cpp/extract-formfields/: CMakeLists.txt  README.md  build.sh  main.cpp  version.h
cpp/extract-formfields/src/: document.cpp  document.h  field.cpp  field.h  page.cpp  page.h
cpp/extract-formfields/src/fields/: button-field.cpp  button-field.h  choice-field.cpp  choice-field.h  text-field.cpp  text-field.h
cpp/hide-formfields/: CMakeLists.txt  build.sh  main.cpp
deployment/docker/: Dockerfile  Dockerfile-no-tests  Dockerfile-with-tests
docs/: converters_pdf2html_generate-html.js.html  converters_pdf2json_generate-json.js.html  converters_ps2pdf_ps-to-pdf.js.html  endpoints_pdf-to-html.js.html  endpoints_pdf-to-json.js.html  global.html  index.html  middleware_get-file-from-base64.js.html  middleware_get-file-from-formdata.js.html  middleware_get-file-from-s3.js.html  middleware_optimize-pdf.js.html
docs/openapi/: spec.yaml
poppler-pdf-to-json/: CMakeLists.txt  CMakeLists.txt.alpine  Dockerfile  README.md  binding.gyp  main.cpp
poppler-pdf-to-json/src/: document.cpp  document.h  field.cpp  field.h  page.cpp  page.h
src/: debug-scopes.js  router.js
src/config/: index.js
src/converters/pdf2html/: generate-html.js  index.js
src/converters/pdf2json/: generate-json.js  index.js
src/converters/ps2pdf/: index.js  ps-to-pdf.js
src/endpoints/: pdf-to-html.js  pdf-to-json.js
src/errors/: index.js  validation-error.js
src/handlers/: cleanup.js  debug.js  errors.js  get-file-from-formdata.js  index.js
src/handlers/pdf/: convert-to-html.js  get-formfields.js  hide-formfields.js  index.js  optimize-pdf.js
src/middleware/: get-file-from-base64.js  get-file-from-formdata.js  get-file-from-s3.js  hide-formfields.js  optimize-pdf.js
src/pdf/: router.js
src/pdf/middleware/: cleanup.js  convert-to-html.js  debug.js  get-file-from-formdata.js  get-formfields.js  hide-formfields.js  index.js  optimize-pdf.js
src/pdf/services/convert-to-html/: generate-html.js  index.js  ps-to-pdf.js
src/pdf/services/formfields/: extract-formfields.js  index.js
src/pdf/utils/: exec.js  index.js
src/routers/: pdf-router.js
src/services/pdf/convert-to-html/: generate-html.js  index.js  ps-to-pdf.js
src/services/pdf/convert-to-html/data-dir/: manifest
src/services/pdf/formfields/: extract-formfields.js  index.js
src/utils/: exec-promisified.js  exec.js  index.js
test/e2e/: convertToHtml.test.js  getFormfields.test.js  runServer.js
test/e2e/fixtures/: fw4.json
test/services/: extract-formfields.js
